--- a/CSS-Revision/BoxModule/BoxModule.html
+++ b/CSS-Revision/BoxModule/BoxModule.html
@@ -20,7 +20,7 @@
         #box2{
             background-color: aqua;
             padding: 20px;
-            border: 5px solid green;
+            border: 5px solid rgb(44, 96, 44);
             margin: 10px;
             
         }
